Algunas funcionalidades para cargar las ilustraciones

--- a/taller1/ilustration.html
+++ b/taller1/ilustration.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <button type="button" class="btn btn-outline-dark">Cerrar sesión</button>
+            <button id="close" type="button" class="btn btn-outline-dark">Cerrar sesión</button>
 
             <br />
 
@@ -137,5 +137,5 @@
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
 
-  </body>
+    </body>
 </html>
