--- a/taller1/index.html
+++ b/taller1/index.html
@@ -50,7 +50,7 @@
                         <input id="id" type="password" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                     </div>
 
-                    <button id="login" type="button" class="btn btn-outline-primary" onclick="sumar(7);">Enviar</button>
+                    <button id="login" type="button" class="btn btn-outline-primary">Enviar</button>
 
                     <br/><br/>
 
