Cambios en la función load

--- a/taller1/ilustration.html
+++ b/taller1/ilustration.html
@@ -34,6 +34,8 @@
                     <small id="username" class="text-muted"></small>
                     <br />
                     <small id="email" class="text-muted"></small>
+                    <br />
+                    <small id="id" class="text-muted"></small>
                 </div>
             </div>
 
