Funcionalidad parcial del boton <realizado>

--- a/taller1/ilustration.html
+++ b/taller1/ilustration.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
 
         <!-- Icono de la aplicación -->
-        <link rel="icon" href="img/reunion.ico" />
+        <link rel="icon" href="img/logo.ico" />
 
         
         <title>Panel de ilustraciones</title>
@@ -38,8 +38,6 @@
                     <small id="username" class="text-muted"></small>
                     <br />
                     <small id="email" class="text-muted"></small>
-                    <br />
-                    <small id="id" class="text-muted"></small>
                 </div>
             </div>
 
@@ -68,6 +66,5 @@
         <script src="js/jquery-3.3.1.slim.min.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-
     </body>
 </html>
