--- a/taller1/index.html
+++ b/taller1/index.html
@@ -8,6 +8,9 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
 
+        <!-- Icono de la aplicación -->
+        <link rel="icon" href="img/logo.ico" />
+
         <title>Admin Ilustraciones</title>
     </head>
   
