--- a/taller2/index.html
+++ b/taller2/index.html
@@ -1,9 +1,19 @@
 <index>
     <head>
         <title>Taller 2 - DWA</title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
 
+        <header>
+        </header>
+
+        <main>
+
+        </main>
+
+        <footer>
+        </footer>
+        
     </body>
 </index>
