--- a/taller2/index.html
+++ b/taller2/index.html
@@ -1,19 +1,30 @@
 <index>
     <head>
         <title>Taller 2 - DWA</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel='stylesheet' href='css/styles.css'>
     </head>
     <body>
 
         <header>
+            <div id='icono'></div>
+            <div id='texto'> 
+                <div>Hola</div>
+            </div>
         </header>
 
         <main>
-
+            <div id='titulo'></div>
+            <div id='imagen'></div>
+            <div id='caracteristicas'></div>
         </main>
 
         <footer>
+            <h2></h2>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </footer>
-        
+
     </body>
 </index>
