Creación de interfaz para el footer y el header

--- a/taller2/index.html
+++ b/taller2/index.html
@@ -1,17 +1,33 @@
 <index>
     <head>
         <title>Taller 2 - DWA</title>
-        <link rel='stylesheet' href='css/styles.css'>
+        <link rel='stylesheet' href='css/stylesFooterHeader.css'>
+        <link rel='stylesheet' href='css/stylesMain.css'>
     </head>
     <body>
 
         <header>
+            <div id="icono"></div>
+            <div id="texto">POKÉDEX_</div>
         </header>
 
         <main>
         </main>
 
         <footer>
+            <div id="textoOtros">OTHERS</div>
+            <div id="p1" class='boton'>
+                <div></div>
+            </div>
+            <div id="p2" class='boton'>
+                <div></div>
+            </div>
+            <div id="p3" class='boton'>
+                <div></div>
+            </div>
+            <div id="p4" class='boton'>
+                <div></div>
+            </div>
         </footer>
 
     </body>
