Implementación parcial del main responsive

--- a/taller2/index.html
+++ b/taller2/index.html
@@ -12,6 +12,23 @@
         </header>
 
         <main>
+            <div id="blanco1"></div>
+
+            <div id="ilustracion" class="cajas">
+                <div id="tituloPpal">CHARIZARD</div>
+                <div id="imagen"></div>
+            </div>
+            
+            <div id="caracteristicas" class="cajas">
+                <div>NO:        006</div>
+                <div>LEVEL:     100</div>
+                <div>TYPE:      FIRE</div>
+                <div>HABILITY:  FLAMES</div>
+                <div>HEIGHT:    1,7 m</div>
+                <div>WEIGHT:    90,5 Kg</div>
+            </div>
+
+            <div id="blanco2"></div>
         </main>
 
         <footer>
