Desacoplamiento de compass-sass en el proyecto

--- a/taller2/index.html
+++ b/taller2/index.html
@@ -1,8 +1,9 @@
 <index>
     <head>
         <title>Taller 2 - DWA</title>
-        <link rel='stylesheet' href='css/stylesFooterHeader.css'>
+        <link rel='stylesheet' href='css/stylesHeader.css'>
         <link rel='stylesheet' href='css/stylesMain.css'>
+        <link rel='stylesheet' href='css/stylesFooter.css'>
     </head>
     <body>
 
@@ -15,17 +16,43 @@
             <div id="blanco1"></div>
 
             <div id="ilustracion" class="cajas">
-                <div id="tituloPpal">CHARIZARD</div>
+                <div id="tituloPpal">
+                    <div id="llama"></div>
+                    <div id="tag">CHARIZARD</div>
+                </div>
                 <div id="imagen"></div>
             </div>
             
             <div id="caracteristicas" class="cajas">
-                <div>NO:        006</div>
-                <div>LEVEL:     100</div>
-                <div>TYPE:      FIRE</div>
-                <div>HABILITY:  FLAMES</div>
-                <div>HEIGHT:    1,7 m</div>
-                <div>WEIGHT:    90,5 Kg</div>
+                <div class="feature">
+                    <div>NO:</div>
+                    <div>006</div>
+                </div>
+
+                <div class="feature">
+                    <div>LEVEL:</div>
+                    <div>100</div>
+                </div>
+
+                <div class="feature">
+                    <div>TYPE:</div>
+                    <div>FIRE</div>
+                </div>
+
+                <div class="feature">
+                    <div>HABILITY:</div>
+                    <div>FLAMES</div>
+                </div>   
+
+                <div class="feature">
+                    <div>HEIGHT:</div>
+                    <div>1,7 m</div>
+                </div> 
+
+                <div class="feature">
+                    <div>WEIGHT:</div>
+                    <div>90,5 Kg</div>
+                </div> 
             </div>
 
             <div id="blanco2"></div>
@@ -34,16 +61,16 @@
         <footer>
             <div id="textoOtros">OTHERS</div>
             <div id="p1" class='boton'>
-                <div></div>
+                <div class="all-1"></div>
             </div>
             <div id="p2" class='boton'>
-                <div></div>
+                <div class="all-2"></div>
             </div>
             <div id="p3" class='boton'>
-                <div></div>
+                <div class="all-3"></div>
             </div>
             <div id="p4" class='boton'>
-                <div></div>
+                <div class="all-4"></div>
             </div>
         </footer>
 
